1.21	2017-06-10
		- bug fix: exiting for system2() sub-process

1.20	2017-05-29
		- system2() dies internally

1.19	2017-05-29
		- optionAtAll come back in cmdargs()
		- Improved system2()

1.18	2017-05-28
		- POD changes
		- Bug fix: 'Depends on Term::ReadKey but does not declare it'

1.17	2017-05-19
		- Removed term_readline() and term_readkey()

1.16	2017-04-19
		- alt_system() changed to system2() immediately
		- Added $in, $out args into term_readline()
		- Added term_readkey()

1.15	2017-04-17
		- Naming convention changed to snake_case from lowerCamelCase
		- Added term_readline()

1.14	2017-03-16
		- file_put_contents: defined and not ref check

1.13	2017-03-08
		- bashReadLine: Bash path for every OSes: /usr/bin/env bash
		- whereisBin: search path order changed
		- fileCache: improved for Perl <v5.14
		- fileCache: caller fix
		- Perl v5.10.1 compatibility

1.12	2017-03-06
		- $whitespace argument changed to $nonquoted in shellmeta()
		- commandArgs() and cmdArgs() improvements

1.11	2017-03-03
		- POD improvements

1.10	2017-03-03
		- getPodText improvements

1.09	2017-02-25
		- Added $prefs ref check
		- Little changes of file mode in file_get_contents/file_put_contents

1.08	2017-01-23
		- Added utf8 mode to file_get_contents/file_put_contents

1.07	2017-01-23
		- Edited pre-requirements
		- Fix for file_put_contents
		- Fix for fileCache utf8 problem
		- Fix for getPodText utf8 problem
		- Fix for bashReadLine STDIN/STDOUT problem
		- Improved commandArgs

1.06	2017-01-07
		- shellmeta: Added whitespace escaping
		- whereisBin: Always return array
		- Added getPodText

1.05	2017-01-06
		- Improved commandArgs

1.04	2016-12-26
		- Perl min versiom changed to v5.14
		- Added file_put_contents
		- Added commandArgs
		- Added whereisBin
		- Added fileCache

1.03	2016-12-22
		- Improved documentation

1.02	2016-12-21
		- Fix for shellmeta
		- Added _system function
		- Added bashReadLine function
		- Added cmdArgs function
		- Added distribution generator
