@@ -19,6 +19,7 @@ SYNOPSIS
             whereis($name, $path);
             file_cache($tag, $expiry, $coderef);
             get_pod_text($file_name, $section, $exclude_section);
+            array_to_hash(@array);
 
 DESCRIPTION
     Collection of utility functions all of exported by default.
@@ -196,6 +197,13 @@ FUNCTIONS
 
     return value: *text of pod in string or array by line, otherwise undef
     if an error occurs*
+
+  array_to_hash(@array)
+    returns hash with indexes for given array
+
+    @array: *command line arguments*
+
+    return value: *Hash or HashRef by wantarray*
 
 INSTALLATION
     To install this module type the following
